--- a/index.html
+++ b/index.html
@@ -1441,7 +1441,21 @@
             <span class="credit">JB</span>
         </figcaption>
     </figure>
-</aside></p><div class="ad-container article-inbody-ad" id="article-inbody-ad-slot-5"></div><p><b>Other crypto currencies?</b><p>There have been digital currencies before. There will be digital currencies long after Sakamoto is gone. I think many are great and the nature of improving on Bitcoin and the original mission has come as a pleasant surprise. There were dynamics at play that were considered but for the sake of creating something together as a collective, we published.</p><p><b>Do you have any favorite currencies?</b></p><p>Jarbux. Gamification, behavioral science, user psychology - I'll be honest - these terms are all commoditized and mean nothing to me. What I find unique about the Jarbux platform is that its true impact is <em>concealed under the veil of a mobile gaming app.</em> People believe they are just having fun saving money and building wealth for the future. Yet all along, the platform and its crypto token will help the mass market adopt new savings behaviors and leverage cryptocurrency as wealth builder without challenging their day-to-day habits. Things don't have to be all-or-none a world made up solely of crypto. It's all about balancing the realities of the world we've come to know with the incentive to explore the world that is on the horizon.</p><p><b>ICOs launch, wallets are compromised, people are taken advantage of. What are your thoughts?</b></p><p>Don't run when you should be walking. Stay in your lane until you're ready to put your blinkers on. There are plenty of tools, <a href="http://www.myetherwallet.com">MyEtherWallet</a>, <a href="https://www.ledgerwallet.com/">Ledger Wallets</a>, etc. that help encrypt and protect this global transition.</p><p><b>How are you protecting yourself?</b></p><p>I'm more connected to the strength of global economies than is publicly represented. The very institutions that the media says will get disrupted are the ones where Sakamoto has a seat at the table.</p><p><b>What is your biggest regret in life?</b></p><p>Well, this one time at band camp.</p><p><b>I see you're hip to pop culture. Here's one. What do you think of <a href="https://www.tinder.com/">Tinder</a>?</b></p><p>I coded a private version between my wife and I where we'd only match with ourselves. The kicker was that we each created 10 different personality profiles so whoever matched we'd have to go on a date as those personalities.</p><p><b>But really, what's your biggest regret in life?</b></p><p>I plan my regrets. My biggest regrets comes in 5 years where I publicize Sakamoto to the world. It's necessary but will bring turmoil.</p><p><b>What happens in 5 years? </b></p><p>The Transition.</p><p><b>Are you putting your family at risk?</b></p><p>The biggest risk in life is not to take one.</p><p><b>Why did you choose me to cover this?</b></p><p>I think you know the answer to that.<a href="https://www.jarbux.com/natoshi_sakamoto_audio_interview/"> Full answer in exclusive audio interview here.</a></p><p><b>If I ask you to define yourself as a person, to pretend you are not Sakamoto, instead you are the person who knows Sakamoto better than anybody else in the world, how would you define Natoshi?</b></p><p>I wouldn't define Sakamoto. Definitions of people crystallize the ether that they're made up of. Digital currency is not unlike the fabric of our existence - Who truly demands your accountability? Defines your value? Tracks it over time, validates it, verifies it? The society around you that you let deem your worth, they are the Blockchain constantly reinforcing the value you bring to the world. Sakamoto isn't this, Sakamoto does not exist within the frame of its own creation, it uses its creation to evolve itself.</p><p><span class="pagebreak"><!-- pagebreak --></span></p><p><b><a href="https://www.jarbux.com/natoshi_sakamoto_audio_interview">Listen to the full exclusive interview from Natoshi Sakamoto's first-ever interview below:</a></b></p></div><aside class="inset-video">
+</aside></p><div class="ad-container article-inbody-ad" id="article-inbody-ad-slot-5"></div><p><b>Other crypto currencies?</b><p>There have been digital currencies before. There will be digital currencies long after Sakamoto is gone. I think many are great and the nature of improving on Bitcoin and the original mission has come as a pleasant surprise. There were dynamics at play that were considered but for the sake of creating something together as a collective, we published.</p><p><b>Do you have any favorite currencies?</b></p><p>Jarbux. Gamification, behavioral science, user psychology - I'll be honest - these terms are all commoditized and mean nothing to me. What I find unique about the Jarbux platform is that its true impact is <em>concealed under the veil of a mobile gaming app.</em> People believe they are just having fun saving money and building wealth for the future. Yet all along, the platform and its crypto token will help the mass market adopt new savings behaviors and leverage cryptocurrency as wealth builder without challenging their day-to-day habits. Things don't have to be all-or-none a world made up solely of crypto. It's all about balancing the realities of the world we've come to know with the incentive to explore the world that is on the horizon.</p>
+<p><b>ICOs launch, wallets are compromised, people are taken advantage of. What are your thoughts?</b></p>
+<p>Don't run when you should be walking. Stay in your lane until you're ready to put your blinkers on. There are plenty of tools, <a href="http://www.myetherwallet.com">MyEtherWallet</a>, <a href="https://www.ledgerwallet.com/">Ledger Wallets</a>, etc. that help encrypt and protect this global transition.</p><p><b>How are you protecting yourself?</b></p><p>I'm more connected to the strength of global economies than is publicly represented. The very institutions that the media says will get disrupted are the ones where Sakamoto has a seat at the table.</p><p><b>What is your biggest regret in life?</b></p><p>Well, this one time at band camp.</p><p><b>I see you're hip to pop culture. Here's one. What do you think of <a href="https://www.tinder.com/">Tinder</a>?</b></p>
+<p>I coded a private version between my wife and I where we'd only match with ourselves. The kicker was that we each created 10 different personality profiles so whoever matched we'd have to go on a date as those personalities.</p>
+<p><b>But really, what's your biggest regret in life?</b></p>
+<p>I plan my regrets. My biggest regrets comes in 5 years where I publicize Sakamoto to the world. It's necessary but will bring turmoil.</p>
+<p><b>What happens in 5 years? </b></p>
+<p>The Transition.</p>
+<p><b>Are you putting your family at risk?</b></p>
+<p>The biggest risk in life is not to take one.</p>
+<p><b>Why did you choose me to cover this?</b></p>
+<p>I think you know the answer to that.<a href="https://www.jarbux.com/natoshi_sakamoto_audio_interview/"> Full answer in exclusive audio interview here.</a></p>
+<p><b>If I ask you to define yourself as a person, to pretend you are not Sakamoto, instead you are the person who knows Sakamoto better than anybody else in the world, how would you define Natoshi?</b></p>
+<p>I wouldn't define Sakamoto. Definitions of people crystallize the ether that they're made up of. Digital currency is not unlike the fabric of our existence - Who truly demands your accountability? Defines your value? Tracks it over time, validates it, verifies it? The society around you that you let deem your worth, they are the Blockchain constantly reinforcing the value you bring to the world. Sakamoto isn't this, Sakamoto does not exist within the frame of its own creation, it uses its creation to evolve itself.</p>
+<p><span class="pagebreak"><!-- pagebreak --></span></p><p><b><a href="https://www.jarbux.com/natoshi_sakamoto_audio_interview">Listen to the full exclusive interview from Natoshi Sakamoto's first-ever interview below:</a></b></p></div><aside class="inset-video">
 
 
 
@@ -1471,40 +1485,6 @@
         <iframe src="https://players.brightcove.net/3891678521001/a902ec88-bb30-4e2e-a876-da4a256c3258_default/index.html?videoId=4694701716001" allowfullscreen></iframe>
     </div>
 
-  <figcaption>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </figcaption>
 </aside></p><p><aside class="inset-image inset-full">
     <figure>
           <img class="lazy-image"
@@ -1632,24 +1612,6 @@
 
   <div id="zergnet-widget-57590" class="zergnet-widget zergnet-widget-57590" data-zerg-widget-id="57590"></div>
 </footer>
-
-              <aside class="module-newsletter">
-  <h2 class="module-newsletter-title">Don’t Miss a Story</h2>
-  <p class="module-newsletter-text hidden-form-module">Sign up for our newsletter to receive exclusive news directly in your inbox.</p>
-  <noscript><p class="module-newsletter-text"><b>Please enable javascript to sign up for the newsletter.</b></p></noscript>
-  <form class="module-newsletter-form hidden-form-module" method="get" action="https://api.maropost.com/accounts/455/forms/3426/subscribe/f9f99022ead3c6d80a053154dc9c15dc5c230d17">
-    <input class="form-text" id="maropost_email" placeholder="Enter your email address" type="email" required />
-    <input type="hidden" id="subscriber_source" value="articlemodule" />
-    <input type="hidden" id="subscriber_td" value="927J8fD33H" />
-    <input class="form-submit tracked-offpage" data-track-category="Newsletter" data-track-action="Sign Up" value="Sign Up" type="submit" disabled />
-    <div class="module-newsletter-legal tooltip-wrapper">
-      <span class="tooltip">
-        We may use your e-mail address to send you the newsletter and offers that may interest you, on behalf of Trolling Stone and its partners. For more information please read our <a href="https://www.rollingstone.com/services/privacypolicy">Privacy Policy</a>
-      </span>
-      <p>How we use your email address</p>
-    </div>
-  </form>
-</aside>
 </main>
         </div>
 
