--- a/index.html
+++ b/index.html
@@ -1455,37 +1455,14 @@
 <p>I think you know the answer to that.<a href="https://www.jarbux.com/natoshi_sakamoto_audio_interview/"> Full answer in exclusive audio interview here.</a></p>
 <p><b>If I ask you to define yourself as a person, to pretend you are not Sakamoto, instead you are the person who knows Sakamoto better than anybody else in the world, how would you define Natoshi?</b></p>
 <p>I wouldn't define Sakamoto. Definitions of people crystallize the ether that they're made up of. Digital currency is not unlike the fabric of our existence - Who truly demands your accountability? Defines your value? Tracks it over time, validates it, verifies it? The society around you that you let deem your worth, they are the Blockchain constantly reinforcing the value you bring to the world. Sakamoto isn't this, Sakamoto does not exist within the frame of its own creation, it uses its creation to evolve itself.</p>
-<p><span class="pagebreak"><!-- pagebreak --></span></p><p><b><a href="https://www.jarbux.com/natoshi_sakamoto_audio_interview">Listen to the full exclusive interview from Natoshi Sakamoto's first-ever interview below:</a></b></p></div><aside class="inset-video">
+<p><span class="pagebreak"><!-- pagebreak --></span></p><p><b><a href="https://www.jarbux.com/natoshi_sakamoto_audio_interview">Listen to the full exclusive interview from Natoshi Sakamoto's first-ever interview below:</a></b></p></div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<aside class="inset-video">
     <div class="embed embed-container">
         <iframe src="https://players.brightcove.net/3891678521001/a902ec88-bb30-4e2e-a876-da4a256c3258_default/index.html?videoId=4694701716001" allowfullscreen></iframe>
     </div>
-
-</aside></p><p><aside class="inset-image inset-full">
+</aside>
+<p><aside class="inset-image inset-full">
     <figure>
           <img class="lazy-image"
   sizes="(max-width: 800px) calc(100vw - 20px), (max-width: 1120px) calc (66vw - 100px), 620px"
@@ -1512,41 +1489,21 @@
   src="https://img.wennermedia.com/480-width/blank-5bc659b1-5503-40b0-bd19-6cfe7904883f.png"
   data-src="https://img.wennermedia.com/480-width/rs-223433-Los-Mochis-Chapo.jpg"
   alt="el chapo" />
-
-
-
-
         <figcaption>
             <span class="caption">El Chapo was arrested on January 8th after a gunfight with the military in Sinaloa.</span>
             <span class="credit">PGR</span>
         </figcaption>
     </figure>
-</aside></p><p></p><div class="page" title="Page 2">
+</aside></p>
+<p></p><div class="page" title="Page 2">
 <div class="section">
 <div class="layoutArea">
 <div class="column">
-
-
-</aside></p></div><p><em>Blogger, JB has written from the front lines of the cryptosphere covering emerging technologies. You can follow his blog here [link]. He wishes to dedicate this article to the people at Jarbux and Sakamoto Natoshi's Transition.</em></p>
 </div>
 </div>
 </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<p><em>Blogger, JB has written from the front lines of the cryptosphere covering emerging technologies. You can follow his blog here [link]. He wishes to dedicate this article to the people at Jarbux and Sakamoto Natoshi's Transition.</em></p>
 
         <div id="module-more-news">
             <h3 class="module-header">More News</h3><div class="article-list">
