--- a/index.html
+++ b/index.html
@@ -1457,6 +1457,7 @@
 <p>I wouldn't define Sakamoto. Definitions of people crystallize the ether that they're made up of. Digital currency is not unlike the fabric of our existence - Who truly demands your accountability? Defines your value? Tracks it over time, validates it, verifies it? The society around you that you let deem your worth, they are the Blockchain constantly reinforcing the value you bring to the world. Sakamoto isn't this, Sakamoto does not exist within the frame of its own creation, it uses its creation to evolve itself.</p>
 <p><span class="pagebreak"><!-- pagebreak --></span></p><p><b><a href="https://www.jarbux.com/natoshi_sakamoto_audio_interview">Listen to the full exclusive interview from Natoshi Sakamoto's first-ever interview below:</a></b></p></div>
 
+<p><em>Blogger, JB has written from the front lines of the cryptosphere covering emerging technologies. You can follow his blog here [link]. He wishes to dedicate this article to the people at Jarbux and Sakamoto Natoshi's Transition.</em></p>
 <aside class="inset-video">
     <div class="embed embed-container">
         <iframe src="https://players.brightcove.net/3891678521001/a902ec88-bb30-4e2e-a876-da4a256c3258_default/index.html?videoId=4694701716001" allowfullscreen></iframe>
