--- a/index.html
+++ b/index.html
@@ -750,9 +750,7 @@
       <div class="g-ytsubscribe" data-channel="RollingStone" data-layout="default" data-count="hidden"></div>
     </li></ul>
       <div class="header-top-logo">
-        <a href="https://www.rollingstone.com" class="tracked-offpage" data-track-category= "Global Nav" data-track-action= "Go to HP"><svg x="0px" y="0px" viewBox="0 0 667.2 142.3" enable-background="new 0 0 667.2 142.3" xml:space="preserve" class="primary">
-    <use class="header-top-logo-img" xlink:href="#svg-logo"></use>
-  </svg>
+        <img src="Header.png" alt="TheTrollingStone">
         </a>
       </div>
       <a class="header-trending"></a>
@@ -766,9 +764,7 @@
         <div class="header-hamburger-bar"></div>
       </div>
       <a href="https://www.rollingstone.com" class="header-bottom-logo tracked-offpage" data-track-action = "Go to HP" data-track-category = "Global Nav">
-        <svg x="0px" y="0px" viewBox="0 0 1299.1 250.2" enable-background="new 0 0 1299.1 250.2" xml:space="preserve" >
-    <use class="header-bottom-logo-img" xlink:href="#svg-logo-simple"></use>
-  </svg></a>
+        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 350 85"><defs><style>.cls-1{font-size:56.98px;font-family:RoyalAcid, Royal Acid;}</style></defs><title>Header</title><text class="cls-1" transform="translate(18.63 65.91)">TrollingStone</text></svg></a>
       <div class="header-title">
         <p>Natoshi Speaks</p>
       </div>
@@ -1455,14 +1451,18 @@
 <p>I think you know the answer to that.<a href="https://www.jarbux.com/natoshi_sakamoto_audio_interview/"> Full answer in exclusive audio interview here.</a></p>
 <p><b>If I ask you to define yourself as a person, to pretend you are not Sakamoto, instead you are the person who knows Sakamoto better than anybody else in the world, how would you define Natoshi?</b></p>
 <p>I wouldn't define Sakamoto. Definitions of people crystallize the ether that they're made up of. Digital currency is not unlike the fabric of our existence - Who truly demands your accountability? Defines your value? Tracks it over time, validates it, verifies it? The society around you that you let deem your worth, they are the Blockchain constantly reinforcing the value you bring to the world. Sakamoto isn't this, Sakamoto does not exist within the frame of its own creation, it uses its creation to evolve itself.</p>
-<p><span class="pagebreak"><!-- pagebreak --></span></p><p><b><a href="https://www.jarbux.com/natoshi_sakamoto_audio_interview">Listen to the full exclusive interview from Natoshi Sakamoto's first-ever interview below:</a></b></p></div>
-
-<p><em>Blogger, JB has written from the front lines of the cryptosphere covering emerging technologies. You can follow his blog here [link]. He wishes to dedicate this article to the people at Jarbux and Sakamoto Natoshi's Transition.</em></p>
+<p><b><a href="https://www.jarbux.com/natoshi_sakamoto_audio_interview">Listen to the full exclusive interview from Natoshi Sakamoto's first-ever interview below:</a></b></p>
 <aside class="inset-video">
-    <div class="embed embed-container">
-        <iframe src="https://players.brightcove.net/3891678521001/a902ec88-bb30-4e2e-a876-da4a256c3258_default/index.html?videoId=4694701716001" allowfullscreen></iframe>
+    <div class="embed embed-container" sizes="(max-width: 800px)">
+        <figcaption>
+        <iframe
+         src="https://players.brightcove.net/3891678521001/a902ec88-bb30-4e2e-a876-da4a256c3258_default/index.html?videoId=4694701716001" allowfullscreen></iframe>
+           <span class="caption">We spent over 30 minutes with Natoshi.</span>
+           <span class="credit">USSDOJ</span>
+         </figcaption>
     </div>
 </aside>
+<br></br>
 <p><aside class="inset-image inset-full">
     <figure>
           <img class="lazy-image"
@@ -1472,16 +1472,12 @@
   src="https://img.wennermedia.com/480-width/blank-5bc659b1-5503-40b0-bd19-6cfe7904883f.png"
   data-src="https://img.wennermedia.com/480-width/rs-223432-chapo01.jpg"
   alt="el chapo" />
-
-
-
-
         <figcaption>
             <span class="caption">For the past decade, Natoshi has hid from the public after creating the most influential cryptocurrency in the world.</span>
             <span class="credit">USDOJ</span>
         </figcaption>
     </figure>
-</aside></p><p><span class="pagebreak"><!-- pagebreak --></span></p><p><aside class="inset-image inset-left">
+</aside></p><p><span class="pagebreak"><!-- pagebreak --></span></p><p><aside class="inset-image inset-full">
     <figure>
           <img class="lazy-image"
   sizes="(max-width: 800px) calc(100vw - 20px), (max-width: 1120px) calc (66vw - 100px), 620px"
@@ -1500,11 +1496,13 @@
 <div class="section">
 <div class="layoutArea">
 <div class="column">
-</div>
-</div>
-</div>
-</div>
+</div></div></div></div>
+<p><span class="pagebreak"><!-- pagebreak --></span></p>
 <p><em>Blogger, JB has written from the front lines of the cryptosphere covering emerging technologies. You can follow his blog here [link]. He wishes to dedicate this article to the people at Jarbux and Sakamoto Natoshi's Transition.</em></p>
+</div>
+<p>
+
+
 
         <div id="module-more-news">
             <h3 class="module-header">More News</h3><div class="article-list">
@@ -1523,38 +1521,15 @@
 
 
 
-                </div><footer class="content-foot">
+                <footer class="content-foot">
 
   <aside class="module-social-sharing">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <a class="tracked-onpage social-comments" href="#" data-track-category="Article Page" data-track-action="Open Comments" data-lightbox="comment">
     <svg x="0px" y="0px" enable-background="new 12 12 16 16" xml:space="preserve">
       <use class="icon-comments" xlink:href="#svg-icon-comments"></use>
     </svg>
   </a>
-
-
-</aside>
+ </aside>
   <div class="content-topics">
 
       <span class="content-topics-header">Topics: </span>
